--- a/style.css
+++ b/style.css
@@ -24,28 +24,27 @@
     text-align: center;
 }
 
-.submit {
-	box-shadow:inset 0px 1px 0px 0px #caefab;
-	background:linear-gradient(to bottom, #77d42a 5%, #5cb811 100%);
-	background-color:#77d42a;
-	border-radius:6px;
-	border:1px solid #268a16;
+.button {
+	box-shadow: 3px 4px 0px 0px #8a2a21;
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+	background-color:#c62d1f;
+	border-radius:18px;
+	border:1px solid #d02718;
 	display:inline-block;
 	cursor:pointer;
-	color:#306108;
+	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
+	font-size:17px;
+	padding:7px 25px;
 	text-decoration:none;
-    text-shadow:0px 1px 0px #aade7c;
-    position: relative;
+	text-shadow:0px 1px 0px #810e05;
 }
-.submit:hover {
-	background:linear-gradient(to bottom, #5cb811 5%, #77d42a 100%);
-	background-color:#5cb811;
+.button:hover {
+	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+	background-color:#f24437;
 }
-.submit:active {
+.button:active {
 	position:relative;
 	top:1px;
 }
+
