--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   text-align: center;
 }
 
-.button1 {
+#button1 {
   box-shadow: 3px 4px 0px 0px #8a2a21;
   background: linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
   background-color: #c62d1f;
@@ -39,42 +39,26 @@
   text-decoration: none;
   text-shadow: 0px 1px 0px #810e05;
 }
-.button1:hover {
+#button1:hover {
   background: linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
   background-color: #f24437;
 }
-.button1:active {
+#button1:active {
   position: relative;
   top: 1px;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-  background-color: white;
+button {
+  background-color: yellow;
+  display: block;
 }
 
-li {
-  height: 50px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 5px;
-  background-color: #ff5d88;
-  color: white;
-  font-size: 1.5em;
-  line-height: 1.5;
+p {
+  color: red;
+  font-size: 25px;
 }
 
-li button {
-  float: left;
-  border: none;
-  height: 40px;
-  cursor: pointer;
-  background-color: #ff9500;
-  color: white;
-  font-size: 1em;
-}
-
-li button:hover {
-  background-color: #febc5d;
+h3 {
+  text-align: center;
+  font-size: 50px;
 }
