--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   vertical-align: middle;
   background: rgba(23, 72, 206, 0.5);
   margin: 10px 0 10px 0;
-  color: grey;
+  color: white;
   border-radius: 20px;
 }
 
@@ -62,7 +62,7 @@ body {
 
 .next-btn:hover {
   background: black;
-  color: wheat;
+  color: white;
 }
 
 .result {
@@ -73,5 +73,26 @@ body {
 
 .option input:checked .option {
   background: black;
-  color: wheat;
+  color: white;
+}
+
+.button {
+  box-shadow: inset 0px 0px 15px 3px #23395e;
+  background: linear-gradient(to bottom, #2e466e 5%, #415989 100%);
+  background-color: #2e466e;
+  border-radius: 17px;
+  border: 1px solid #1f2f47;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  padding: 6px 13px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #263666;
+}
+
+.button:hover {
+  background: linear-gradient(to bottom, #415989 5%, #2e466e 100%);
+  background-color: #415989;
 }
