--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   font-size: 36px;
   text-transform: uppercase;
   color: black;
+  font-family: "Orbitron", sans-serif;
 }
 
 .question {
@@ -32,6 +33,7 @@ body {
   border-radius: 20px;
   margin: 10px 0 10px 0;
   color: wheat;
+  font-family: "Orbitron", sans-serif;
 }
 
 .option {
@@ -43,6 +45,7 @@ body {
   margin: 10px 0 10px 8px;
   color: white;
   border-radius: 20px;
+  font-family: "Orbitron", sans-serif;
 }
 
 .option:hover {
@@ -60,6 +63,7 @@ body {
   cursor: pointer;
   float: right;
   margin: 10px;
+  font-family: "Orbitron", sans-serif;
 }
 
 .next-btn:hover {
@@ -71,6 +75,7 @@ body {
   height: 100px;
   text-align: center;
   font-size: 75px;
+  font-family: "Orbitron", sans-serif;
 }
 
 .score {
@@ -81,6 +86,7 @@ body {
 #name {
   position: relative;
   height: 25px;
+  font-family: "Orbitron", sans-serif;
 }
 
 .option input:checked .option {
@@ -97,7 +103,7 @@ body {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: Arial;
+  font-family: "Orbitron", sans-serif;
   font-size: 15px;
   padding: 6px 13px;
   text-decoration: none;
@@ -113,6 +119,7 @@ body {
   position: absolute;
   top: 0px;
   right: 5px;
+  font-family: "Orbitron", sans-serif;
 }
 
 .myButton {
@@ -124,7 +131,7 @@ body {
   display: inline-block;
   cursor: pointer;
   color: #505739;
-  font-family: Arial;
+  font-family: "Orbitron", sans-serif;
   font-size: 14px;
   font-weight: bold;
   padding: 12px 16px;
@@ -138,4 +145,17 @@ body {
 .myButton:active {
   position: relative;
   top: 1px;
+}
+
+h3 {
+  font-family: "Bungee Outline", cursive;
+  color: black;
+  font-size: 50px;
+}
+
+p {
+  font-family: "Bungee Outline", cursive;
+  color: black;
+  font-size: 35px;
+  font-weight: bolder;
 }
